# xxd-mlpinf

./: .gitignore  README.md  mlperf_log_detail.txt
closed/NVIDIA/: .clangd  .gitattributes  .gitignore  Makefile  Makefile.build  Makefile.const  Makefile.data  Makefile.docker  Makefile.power  Makefile.pyxis  Makefile.submission  Makefile.tests  README.md  log_70B_serve.txt  model.cache
closed/NVIDIA/code/: __init__.py  main.py
closed/NVIDIA/code/bert/tensorrt/: accuracy-bert.py  builder.py  builder_utils.py  constants.py  download_data.sh  download_model.sh  harness.py  network.py  preprocess_data.py
closed/NVIDIA/code/common/: __init__.py  accuracy.py  constants.py  file_downloads.sh  gbs.py  image_preprocessor.py  lwis_ops.py  mps.py  nvpmodel_orin.py  paths.py  power_limit.py  submission.py  utils.py  workload.py
closed/NVIDIA/code/common/mlcommons/: accuracy_checker.py  compliance.py  lg_logs.py  loadgen.py  results.py  runner.py
closed/NVIDIA/code/common/systems/: known_hardware.py  system_list.py
closed/NVIDIA/code/common/triton/: base_config.py  base_harness.py
closed/NVIDIA/code/deepseek-r1/tensorrt/: README.md  __init__.py  builder.py  constants.py  dataset.py  generation_config.json  preprocess_data.py
closed/NVIDIA/code/dlrm-v2/tensorrt/: __init__.py  builder.py  calibrator.py  constants.py  criteo.py  fields.py  harness.py
closed/NVIDIA/code/fields/: gen_engines.py  general.py  harness.py  loadgen.py  meta.py  models.py  power.py  triton.py  wrapped.py
closed/NVIDIA/code/gptj/tensorrt/: README.md  __init__.py  builder.py  cnndailymail_data_prep.py  constants.py  dataset.py  (+7 more)
closed/NVIDIA/code/harness/: .clang-format  CMakeLists.txt
closed/NVIDIA/code/harness/common/: callback.hpp  harness_flags.hpp  logger.cpp  nvtxUtils.hpp  nvtx_common_wrapper.h  utils.hpp
closed/NVIDIA/code/harness/ffi_utils/: ffi_utils.cpp
closed/NVIDIA/code/harness/harness_default/: lwis_pybind.cc  main_default.cc  setup.py
closed/NVIDIA/code/harness/harness_dlrm_v2/: batch_maker.cpp  batch_maker.h  dlrm_v2_kernels.cu  dlrm_v2_kernels.h  dlrm_v2_qsl.h  dlrm_v2_server.cpp  dlrm_v2_server.h  main_dlrm_v2.cpp
closed/NVIDIA/code/harness/harness_llm/: llm_core.cc  llm_core.hpp  llm_recorder.hpp  llm_server.cc  llm_server.hpp  llm_utils.hpp  main_llm.cc
closed/NVIDIA/code/harness/harness_triton/: main_server.cc
closed/NVIDIA/code/harness/harness_triton/include/: bert_concurrent_frontend.hpp  dla_concurrent_frontend.hpp  dla_triton_frontend_helpers.hpp  pinned_memory_pool.hpp  triton_concurrent_frontend.hpp  triton_frontend_helpers.hpp  triton_frontend_server.hpp
closed/NVIDIA/code/harness/harness_triton/src/: bert_concurrent_frontend.cpp  dla_concurrent_frontend.cpp  dla_triton_frontend_helpers.cpp  pinned_memory_pool.cpp  triton_concurrent_frontend.cpp  triton_frontend_helpers.cpp  triton_frontend_server.cpp
closed/NVIDIA/code/harness/harness_triton_llm/: README.md  backend.py  dataset.py  frontend.py  main.py  utils.py
closed/NVIDIA/code/harness/lwis/: CMakeLists.txt
closed/NVIDIA/code/harness/lwis/include/: logger.h  logging.h  lwis.hpp  lwis_buffers.h  numpy.hpp  qsl.hpp
closed/NVIDIA/code/harness/lwis/src/: lwis.cpp
closed/NVIDIA/code/llmlib/: README.md  __init__.py  builder.py  config.py  dataset.py  factory.py  fields.py  hf_quantize.py  launch_server.py  quantize.py  server.py  utils.py  warmup.py
closed/NVIDIA/code/ops/: __init__.py  generate_engines.py  harness.py  loadgen.py
closed/NVIDIA/code/plugin/: __init__.py  plugin_map.py
closed/NVIDIA/configs/minimal/: README.md
closed/NVIDIA/docker/: Dockerfile  install_deps.sh  pyproject.toml
closed/NVIDIA/docker/common/: install_apt_deps.sh  install_docker.sh  install_misc_deps.sh  install_mitten.sh  install_pip_deps.sh  install_rgat_deps.sh  install_tensorrt.sh  requirements.aarch64-Grace.txt  requirements.x86_64.txt
closed/NVIDIA/docker/common/patches/: dgl.GKlib.no-march-native.patch  dgl.METIS.no-march-native.patch  nvshmem.ibgda.patch
closed/NVIDIA/docker/common/requirements/: requirements.dlrm-v2.txt  requirements.llm.txt  requirements.retinanet.txt  requirements.stable-diffusion-xl.txt  requirements.whisper.txt
closed/NVIDIA/docker/release/: install_loadgen.sh  install_trt_llm.sh
closed/NVIDIA/documentation/: FAQ.md  calibration.md  commands.md  heterogeneous_mig.md  performance_tuning_guide.md  submission_guide.md
closed/NVIDIA/gui/: README.md  script_creator.py  script_utils.sh  window.py
closed/NVIDIA/power/: bios_setting.sh  check_switch.sh  set_fan_speed.sh  set_gpu_powercap.sh  set_nvlink.sh  set_nvswitch.sh  tgp_sweep_run.bash
closed/NVIDIA/pyxis/: README.md  launch_slurm_target.sh  run_template_sbatch.sh
closed/NVIDIA/scripts/: check_intranet.sh  check_reset_maxq_state.py  configure_gh_ps.sh  create_poetry_lock.py  generate_system_descriptions.py  get_mig_profiles.py  get_system_id.sh  mig_configure.sh  mig_get_uuid.sh  nvpower_r353_maxp.sh  print_harness_result.py  server_tuning_bs.py  set_clocks.sh  split_datacenter_edge.py  utils.py
closed/NVIDIA/scripts/NUMA/: DGX-H100_H100-SXM-80GBx2.sh  DGX-H100_H100-SXM-80GBx4.sh  DGX-H100_H100-SXM-80GBx8.sh
closed/NVIDIA/scripts/bandwidth/: get_bw_nums.py
closed/NVIDIA/scripts/cache/: clip1.cache  clip2.cache  unet.cache  vae.cache
closed/NVIDIA/scripts/fast_tracing/: mlperf_perf_tr.py
closed/NVIDIA/scripts/perf_monitor/: plot_nvidia_smi_mon.py  run_nvidia_smi_mon.py
closed/NVIDIA/scripts/slurm_llm/: README.md
closed/NVIDIA/systems/: B200-SXM-180GBx1_TRT.json  B200-SXM-180GBx8_TRT.json  DGX-H100_H100-SXM-80GBx8_TRT.json  GB200-NVL72_GB200-186GB_aarch64x72_TRT_Triton copy.json  GH200-GraceHopper-Superchip_GH200-144GB_aarch64x1_TRT.json  GH200-GraceHopper-Superchip_GH200-144GB_aarch64x2_TRT.json  H200-SXM-141GBx8_TRT.json  H200-SXM-141GBx8_TRT_Triton.json  system_descriptions.tsv
closed/NVIDIA/systems/backup_systems/: GH200-GraceHopper-Superchip_GH200-144GB_aarch64x2_TRT.json  H200-SXM-141GBx8_TRT_MaxQ.json  L40Sx8_TRT.json
scripts/: export_submission.py
(+401 files in other folders)
