[project]
name = "mlperf-inference"
version = "0.1.0"
description = ""
authors = [
    {name = "MLPerf-Inference"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "onnx-graphsurgeon (==0.5.2)",
    "transformers (==4.45.1)",
    "torchsnapshot (==0.1.0)",
    "torchmetrics (==1.0.3)",
    "iopath (==0.1.10)",
    "pyre-extensions (==0.0.32)",
    "polygraphy (==0.49.14)",
    "grpcio (>=1.67.1)",
    "tritonclient (==2.52.0)",
    "gevent (==24.11.1)",
    "geventhttpclient (==2.3.3)",
    "cuda-python (==12.6.2)",
    "pynvml (==11.5.0)",
    "plotly (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
